<resources>
    <string name="app_name">Quiz\nit !</string>
    <string name="tech">High-Tech</string>
    <string name="culture">General culture</string>
    <string name="animal">Animals</string>
    <string name="science">Science</string>
    <string name="all">All in one</string>

    <string name="yes">True</string>
    <string name="no">False</string>

    <string name="return_menu">Do you want to return to the menu?</string>
    <string name="menu">Menu</string>
    <string name="game_over">Game over !</string>
    <string name="win">You win !</string>
    <string name="resume">Resume</string>
</resources>
