<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginBottom="10sp"
            android:layout_marginRight="10sp">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/ic_profil"
                />

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/ic_settings"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="40sp"
            android:textAlignment="center"
            android:textSize="70sp"
            android:fontFamily="@font/SEASRN__"
            android:textColor="@android:color/holo_red_light"
            />

        <Button
            style="@style/button"
            android:background="@drawable/button_menu_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:layout_marginLeft="60sp"
            android:layout_marginRight="60sp"
            android:layout_marginBottom="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/but_all"/>

        <Button
            style="@style/button"
            android:background="@drawable/button_menu_tech"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tech"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:layout_marginLeft="60sp"
            android:layout_marginRight="60sp"
            android:layout_marginBottom="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/but_tech"/>

        <Button
            style="@style/button"
            android:background="@drawable/button_menu_cult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/culture"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:layout_marginLeft="60sp"
            android:layout_marginRight="60sp"
            android:layout_marginBottom="20sp"
            android:id="@+id/but_cult"
            android:textColor="@android:color/white"/>

        <Button
            style="@style/button"
            android:background="@drawable/button_menu_anim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:layout_marginLeft="60sp"
            android:layout_marginRight="60sp"
            android:layout_marginBottom="20sp"
            android:id="@+id/but_anim"
            android:textColor="@android:color/white"/>

        <Button
            style="@style/button"
            android:background="@drawable/button_menu_scie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:layout_marginLeft="60sp"
            android:layout_marginRight="60sp"
            android:layout_marginBottom="20sp"
            android:id="@+id/but_scie"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>