<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350sp"
    android:layout_height="200sp"
    android:orientation="vertical"
    android:background="@drawable/dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:text="@string/return_menu"
        android:fontFamily="@font/caviardreamsbold"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textAlignment="center"
        android:paddingStart="15sp"
        android:paddingEnd="15sp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30sp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_menu"
                android:layout_weight="1"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:background="@drawable/btn_back_menu"
                android:text="@string/menu"
                android:textAllCaps="false"
                android:textSize="18sp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_resume"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/btn_back_menu"
                android:text="@string/resume"
                android:textAllCaps="false"
                android:textSize="18sp"
                />

        </LinearLayout>

</LinearLayout>